--- a/vision/CMakeLists.txt
+++ b/vision/CMakeLists.txt
@@ -4,18 +4,10 @@ project(vision)
 find_package(catkin REQUIRED COMPONENTS
   cv_bridge
   image_transport
-  OpenCV REQUIRED
-  roscpp
+  OpenCV
   rospy
   sensor_msgs
   std_msgs
 )
 
 catkin_package()
-
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
