--- a/vision/CMakeLists.txt
+++ b/vision/CMakeLists.txt
@@ -52,6 +52,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## Generate messages in the 'msg' folder
 # add_message_files(
+    lane_laser.msg
 #   FILES
 #   Message1.msg
 #   Message2.msg
