--- a/mybot_navigation/config/base_local_planner_params.yaml
+++ b/mybot_navigation/config/base_local_planner_params.yaml
@@ -1,7 +1,7 @@
 TrajectoryPlannerROS:
   max_vel_x: 0.5
-  min_vel_x: -0.5
-  max_vel_y: 0.0
+  min_vel_x: 0.0
+  #max_vel_y: 0.0
   max_vel_theta: 1.5
   min_in_place_vel_theta: 0.01
 
