--- a/mybot_navigation/config/base_local_planner_params.yaml
+++ b/mybot_navigation/config/base_local_planner_params.yaml
@@ -1,9 +1,9 @@
 TrajectoryPlannerROS:
   max_vel_x: 0.5
-  min_vel_x: 0.0
+  min_vel_x: 0.1
   #max_vel_y: 0.0
   max_vel_theta: 1.5
-  min_in_place_vel_theta: 0.01
+  min_in_place_vel_theta: 0.4
 
   acc_lim_theta: 1.5
   acc_lim_x: 0.5
@@ -16,6 +16,9 @@ TrajectoryPlannerROS:
   vy_sample: 0.0
   vtheta_samples: 40
 
-  path_distance_bias: 32.0
-  goal_distance_bias: 20.0
+  #path_distance_bias: 32.0
+  #goal_distance_bias: 20.0
+
+  pdist_scale: 5.0
+  gdist_scale: 0.2
   occdist_scale: 0.02
