--- a/mybot_navigation/config/global_costmap_params.yaml
+++ b/mybot_navigation/config/global_costmap_params.yaml
@@ -3,9 +3,9 @@
 global_costmap:
   global_frame: odom
   robot_base_frame: chassis
-  update_frequency: 1.0
+  update_frequency: 5.0
   publish_frequency: 1.0
   resolution: 0.05
-  static_map: true
+  static_map: false
   width: 10.0
   height: 10.0
