--- a/mybot_navigation/config/local_costmap_params.yaml
+++ b/mybot_navigation/config/local_costmap_params.yaml
@@ -1,9 +1,12 @@
+# static_map - true if using gmapping in place of amcl/map_server
+# rolling_window - false if static_map is true
+
 local_costmap:
   global_frame: odom
   robot_base_frame: chassis
-  update_frequency: 2.0
-  publish_frequency: 1.0
-  static_map: true
+  update_frequency: 5.0
+  publish_frequency: 2.0
+  static_map: false
   rolling_window: false
   width: 6.0
   height: 6.0
